small changes in router
